deploy/base/s3uploader/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: s3uploader
  labels:
    app: s3uploader
spec:
  to:
    kind: Service
    name: s3uploader
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
